--- a/Demo_smart_hospital/Configurations/config.ini
+++ b/Demo_smart_hospital/Configurations/config.ini
@@ -1,3 +1,13 @@
 [basic info]
 url=https://demo.smart-hospital.in/
 browser=chrome
+
+[birth_record]
+childname=dineshkumar
+weight=4
+birth_date=06/30/2024
+phone=9345265622
+Adress=salem
+caseId=2283
+FatherName=karmegam
+report=baby is fine
