--- a/Demo_smart_hospital/Configurations/config.ini
+++ b/Demo_smart_hospital/Configurations/config.ini
@@ -1,3 +1,12 @@
 [basic info]
 url=https://demo.smart-hospital.in/
 browser=chrome
+[blank login info]
+blank_username=
+blank_password=
+[valid login info]
+doctor_valid_username="sonia@gmail.com"
+doctor_valid_password="sonia@123"
+[invalid login info]
+doctor_invalid_username="sokenief"
+doctor_invalid_password="sonia@gmail"
