--- a/Demo_smart_hospital/Configurations/config.ini
+++ b/Demo_smart_hospital/Configurations/config.ini
@@ -49,10 +49,26 @@ validDeathSearchRecord=1111
 [blank login info]
 blank_username=
 blank_password=
+
 [valid login info]
 doctor_valid_username="sonia@gmail.com"
 doctor_valid_password="sonia@123"
+
 [invalid login info]
 doctor_invalid_username="sokenief"
 doctor_invalid_password="sonia@gmail"
 
+[valid new patient data]
+patient_name=surya												
+guardian_name=krishnan										
+dob=05/29/2002
+bloodgroup=O+
+marital_status=Single
+phone_number=9977554579
+email=suryakrishnan@gmail.com
+address=kaveri avenu,amman nager,coimbatore-98
+known_allergies=voimiting
+TPA_ID=1876548
+TPA_Validity=Sep-26
+ni_number=345678
+alternate_number=9876543456
