--- a/Demo_smart_hospital/Configurations/config.ini
+++ b/Demo_smart_hospital/Configurations/config.ini
@@ -56,3 +56,14 @@ doctor_valid_password="sonia@123"
 doctor_invalid_username="sokenief"
 doctor_invalid_password="sonia@gmail"
 
+[valid admin login info]
+valid_username=jason@gmail.com
+valid_password=password
+
+[blank admin login info]
+blank_username=
+blank_password=
+
+[invalid admin login info]
+invalid_username=jasson@gmail.com
+invalid_password=passsword
