--- a/Demo_smart_hospital/Configurations/config.ini
+++ b/Demo_smart_hospital/Configurations/config.ini
@@ -49,10 +49,22 @@ validDeathSearchRecord=1111
 [blank login info]
 blank_username=
 blank_password=
+
 [valid login info]
 doctor_valid_username="sonia@gmail.com"
 doctor_valid_password="sonia@123"
+
 [invalid login info]
 doctor_invalid_username="sokenief"
 doctor_invalid_password="sonia@gmail"
 
+[valid_user_search_appointment]
+user_search_details=Amit Singh (9009)
+
+[Invalid_user_search_appointment]
+Invalid_user_search_details=123456
+
+[valid_Add_appointment]
+valid_date=08/10/2024
+valid_message=Skin alergy
+valid_adress=1/36 Jayanagar Salem
