--- a/Demo_smart_hospital/Configurations/config.ini
+++ b/Demo_smart_hospital/Configurations/config.ini
@@ -96,3 +96,8 @@ blank_password=
 invalid_username=jasson@gmail.com
 invalid_password=passsword
 
+
+[send individual sms]
+Title=Suggestions to take medicine
+Template_id=Id001
+Message_text=Take medicine before lunch
