--- a/Demo_smart_hospital/Configurations/config.ini
+++ b/Demo_smart_hospital/Configurations/config.ini
@@ -77,6 +77,11 @@ valid_date=08/10/2024
 valid_message=Skin alergy
 valid_adress=1/36 Jayanagar Salem
 
+[Invalid_Add_appointment]
+Invalid_date=05/31/2024
+Invalid_message=Skin alergy
+Invalid_adress=1/36 Jayanagar Salem
+
 [invalid new patient data]
 patient_name="siva"											
 guardian_name="krishnan"										
