--- a/Demo_smart_hospital/Configurations/config.ini
+++ b/Demo_smart_hospital/Configurations/config.ini
@@ -51,19 +51,19 @@ blank_username=
 blank_password=
 
 [valid login info]
-doctor_valid_username="sonia@gmail.com"
-doctor_valid_password="sonia@123"
-user_valid_username="pat1"
-user_valid_password="pat1@123"
+doctor_valid_username=sonia@gmail.com
+doctor_valid_password=sonia@123
+user_valid_username=pat1
+user_valid_password=pat1@123
 
 [invalid login info]
-doctor_invalid_username="sokenief"
-doctor_invalid_password="sonia@gmail"
-user_invalid_username="kjegfy"
-user_invalid_password="rtyub#g"
+doctor_invalid_username=sokenief
+doctor_invalid_password=sonia@gmail
+user_invalid_username=kjegfy
+user_invalid_password=rtyub7g
 
 [bed status patient_name]
-valid_patient_name=Jemma
+valid_patient_name=Vanita 
 valid_patient_name1=Alice
 already_existing=Alisha Knowles
 [valid_user_search_appointment]
@@ -78,16 +78,16 @@ valid_message=Skin alergy
 valid_adress=1/36 Jayanagar Salem
 
 [invalid new patient data]
-patient_name="siva"											
-guardian_name="krishnan"										
+patient_name=siva											
+guardian_name=krishnan										
 dob=
-bloodgroup="O+"
-marital_status="Single"
-phone_number="9977554589"
-email="suryakrishnan@gmail.com"
-address="kaveri avenu,amman nager,coimbatore-98"
-known_allergies="voimiting"
-TPA_ID="1876548"
-TPA_Validity="05/10/2027"
-ni_number="345678"
-alternate_number="9876543456"
+bloodgroup=O+
+marital_status=Single
+phone_number=9977554589
+email=suryakrishnan@gmail.com
+address=kaveri avenu,amman nager,coimbatore-98
+known_allergies=voimiting
+TPA_ID=1876548
+TPA_Validity=05/10/2027
+ni_number=345678
+alternate_number=9876543456
